<resources>
    <string name="app_name">pillowAlcohol</string>
    <string name="Scocket_Connect">连接</string>
    <string name="Version_Name">版本号： V</string>
    <string name="Connecting">连接中...</string>
    <string name="Connect_Sucess">连接成功!</string>
    <string name="Break">断开</string>
    <string name="BreakLink">断开连接</string>
    <string name="UnConnect">未连接</string>
    <string name="Equipment_UnConnect">设备未连接</string>
    <string name="Equipment_Goto_UnConnect">是否确认断开当前连接设备</string>
    <string name="Connectted">已连接</string>
    <string name="Data_Loading">加载数据</string>
    <!--<string name="ing">正在</string>-->
    <string name="Para_Data_Deleting">确定要删除当前数据吗？</string>
    <string name="Para_Data_WrongFormat">您输入的格式不对，请输入小于14位的字符</string>
    <string name="Para_Setting_Success">设置成功！</string>
    <string name="Para_Setting_Fail">设置失败！</string>
    <string name="Para_Carabration_UnEmpty">校准值输入不能为空！</string>
    <string name="Para_Carabration_Error">校准值输入有误，有效值20-50或者0</string>
    <string name="Para_AlarmData">报警限</string>
    <string name="Para_AlarmData_UnEmpty">报警限输入不能为空！</string>
    <string name="Para_AlarmData_Error">报警限输入有误，有效值0-100！</string>
    <string name="Para_AlarmBela">报警铃声</string>
    <string name="Test_About">我的</string>
    <string name="Test_Name">测试</string>
    <string name="History">历史记录</string>
    <string name="Calibratting">正在校准...</string>
    <string name="Calibrate_Data">校准值</string>
    <string name="Calibrate">校准</string>
    <string name="Calibrate_InputData">请输入值</string>
    <string name="Dialog_Confirm">确定</string>
    <string name="Dialog_WarmTip">温馨提示</string>
    <string name="Calibrate_Fail">校准失败</string>
    <string name="Calibrate_Success">校准完成</string>
    <string name="Ble">蓝牙</string>
    <string name="Ble_Name">蓝牙名称:</string>
    <string name="Ble_Name0">蓝牙名</string>
    <string name="Ble_Connect">蓝牙连接</string>
    <string name="Setting">设置</string>
    <string name="Ble_SoftVertion">蓝牙模块软件版本号</string>
    <string name="Calibrate_LastTime_Zero">上次零点校准时间:</string>
    <string name="Calibrate_LastTime_UnZero">上次非零点校准时间:</string>
    <string name="Calibrate_LastFactor">上次校准系数</string>
    <string name="Equipment_Me">我的设备</string>
    <string name="Year">年</string>
    <string name="Month">月</string>
    <string name="Date">日</string>
    <string name="Return">返回</string>
    <string name="Classic_Rintong">经典铃声</string>
    <string name="Vabrate">振动</string>
    <string name="Alarm_Tip">报警提示</string>
    <string name="Equipment_SoftVersion">设备软件版本号</string>
    <string name="Equipment_Name">设备名称</string>
    <string name="Equipment_List">设备序列号</string>
    <string name="Acho_Test">酒精检测</string>
    <string name="Test_Time">检测时长</string>
    <string name="Network_Setting">网络设置</string>
    <string name="Connect_Status">连接状态:</string>
    <string name="Network_Connect">网络连接</string>
    <string name="Me">我</string>

    <string name="Test_MyTime">时长:0时0分0秒</string>
    <string name="Test_MyTime_Total">时长</string>
    <string name="Test_MyTime_Hour">时</string>
    <string name="Test_MyTime_Minute">分</string>
    <string name="Test_MyTime_Second">秒</string>

    <string name="My_About">关于</string>
    <string name="Product">产品</string>
    <string name="Parameter_setting">参数设置</string>
    <string name="Cancel">取消</string>
</resources>
