<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">
    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@color/grey_50"
        >

        <TextView
            android:id="@+id/disconnect_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Dialog_WarmTip"
            android:layout_marginTop="@dimen/len_10"
            android:textColor="@color/textAccent"
            android:textSize="18sp" />
        <View
            android:id="@+id/view_line"
            android:layout_below="@+id/disconnect_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/len_2"
            android:background="#cccccc" />
        <TextView
            android:id="@+id/dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/textViewStyle"
            android:background="@null"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/view_line"
            android:layout_marginTop="@dimen/len_40"
            android:layout_marginRight="@dimen/len_20"
            android:layout_marginLeft="@dimen/len_20"
            android:text="@string/Equipment_Goto_UnConnect"
            android:textSize="@dimen/len_16"
            android:gravity="center"
            android:textColor="@color/textDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_20"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/tip_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue_grey_100"
                android:text="@string/Cancel"
                android:textColor="@color/textDark"
                android:textSize="@dimen/len_18"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/tip_btn_sure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Dialog_Confirm"
                android:background="@color/primaryColor"
                android:textColor="@color/textDark"
                android:textSize="@dimen/font_18"
                 />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
