<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:background="@color/toolbar_blue"
        android:paddingLeft="@dimen/len_10"
        android:paddingRight="@dimen/len_10"
        android:paddingTop="@dimen/len_8">

        <ImageView
            android:id="@+id/iv_product_back"
            android:layout_width="@dimen/len_40"
            android:layout_height="@dimen/len_24"
            android:src="@mipmap/ic_back_view"
            android:layout_marginLeft="@dimen/len_6"
            android:scaleType="fitStart"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/len_10" />

        <TextView
            android:id="@+id/tv_bluetooth_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:paddingBottom="@dimen/len_10"
            android:text="@string/Product"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/setting_background"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/Equipment_SoftVersion"
            android:textColor="@color/textDark"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/len_6"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/font_16"/>
        <TextView
            android:id="@+id/tv_software_version"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/textPrimary"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/len_4"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:textSize="@dimen/font_16"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/Equipment_Name"
            android:textColor="@color/textDark"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/len_6"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/font_16"/>
        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/textPrimary"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/len_4"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:textSize="@dimen/font_16"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/Equipment_List"
            android:textColor="@color/textDark"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/len_6"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/font_16"/>
        <TextView
            android:id="@+id/tv_serial_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/textPrimary"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/len_4"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:textSize="@dimen/font_16"/>
    </LinearLayout>
</LinearLayout>
