<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_gravity="top"
        android:background="@color/toolbar_blue"
        android:paddingLeft="@dimen/len_10"
        android:paddingRight="@dimen/len_10"
        android:paddingTop="@dimen/len_8">
        <ImageView
            android:id="@+id/iv_setting_back"
            android:layout_width="@dimen/len_52"
            android:layout_height="24dp"
            android:src="@mipmap/ic_back_view"
            android:layout_marginLeft="@dimen/len_6"
            android:scaleType="fitStart"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/len_10"/>
        <TextView
            android:id="@+id/tv_bluetooth_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:paddingBottom="@dimen/len_10"
            android:text="@string/Calibrate"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/len_10">

        <TextView
            android:id="@+id/tv_name_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ble_Name"
            android:textColor="@color/textPrimary" />
        <TextView
            android:id="@+id/tv_bt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textAccent"
            android:layout_toRightOf="@+id/tv_name_show"
            android:layout_marginLeft="@dimen/len_4"
            android:textSize="@dimen/len_14"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/len_10">
        <TextView
            android:id="@+id/tv_connected_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Connect_Status"
            android:layout_marginRight="@dimen/len_4"
            android:textSize="@dimen/len_14"
            android:textColor="@color/textPrimary"/>
        <TextView
            android:id="@+id/tv_connected_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/len_6"
            android:layout_toRightOf="@+id/tv_connected_test"
            android:textColor="@color/textAccent"
            android:textSize="@dimen/len_14"
            android:text="@string/Connectted"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Calibrate_LastTime_Zero"
                android:textColor="@color/textAccent"
                android:layout_marginLeft="@dimen/len_14"
                android:textSize="@dimen/len_14"/>
            <TextView
                android:id="@+id/tv_zero_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/len_20"
                android:gravity="center_horizontal"
                android:textColor="@color/textDark"
                android:background="@drawable/bg_tv_line"
                android:textSize="@dimen/len_14"/>
            <TextView
                android:id="@+id/tv_zero_second"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:background="@drawable/bg_tv_line"
                android:layout_marginLeft="@dimen/len_10"
                android:layout_marginRight="@dimen/len_10"
                android:textColor="@color/textDark"
                android:textSize="@dimen/len_14"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Calibrate_LastTime_UnZero"
                android:textColor="@color/textRed"
                android:layout_marginLeft="@dimen/len_14"
                android:textSize="@dimen/len_14"/>
            <TextView
                android:id="@+id/tv_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_tv_line"
                android:layout_marginLeft="@dimen/len_10"
                android:gravity="center_horizontal"
                android:textColor="@color/textDark"
                android:textSize="@dimen/len_14"/>
            <TextView
                android:id="@+id/tv_second"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_tv_line"
                android:layout_marginLeft="@dimen/len_10"
                android:gravity="center_horizontal"
                android:textColor="@color/textDark"
                android:layout_marginRight="@dimen/len_10"
                android:textSize="@dimen/len_14"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/Calibrate_LastFactor"
                android:textColor="@color/textDark"
                android:layout_marginTop="@dimen/len_20"
                android:textSize="@dimen/len_24"/>
            <TextView
                android:id="@+id/tv_calibration_factor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/len_20"
                android:textColor="@color/textDark"
                android:layout_gravity="center_horizontal"
                android:textSize="50sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_80">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/Calibrate_Data"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/len_14" />
            <TextView
                android:id="@+id/tv_default_factor"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:textColor="@color/textDark"
                android:text="20"
                android:textSize="@dimen/len_20"
                android:gravity="center"
                android:background="@color/blue_200"
                android:clickable="true"
                android:layout_marginLeft="@dimen/len_20"/>
            <Button
                android:id="@+id/bt_calibration"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:textColor="@color/textDark"
                android:background="@color/blue_400"
                android:text="@string/Calibrate"
                android:textSize="@dimen/len_16"
                android:gravity="center"
                android:textAllCaps="false"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
